2004-07-22  ------ omnetpp-3.0a6 released ------

2004-07-15   Andras Varga

	* csimul.cc: deleteNetwork(): moved flushing event queue after deleting
	modules (because module destructors may contain delete cancelEvent(msg)
	calls)

2004-07-10   Andras Varga

	* csimul.cc,cmodule.cc,util.cc: added cSimulation::contextType() stuff

2004-07-05   Andras Varga

	* csimplemodule.cc: recordScalar() functions for text and cStatistic 
	data removed. A cStatistic object can be recorded into the scalar file 
	by calling its recordScalar() method (below).

	* cstat.cc: added recordScalar() method.

2004-06-24  Andras Varga

	* cpar.cc: implemented support for type M (XML element) in cPar.

2004-06-22  Andras Varga

	* added cxmlelement.cc

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

FIXME: cStdDev: info() should print mean(), stdDev() too!
FIXME: setTagArg("t", 0, "foo,bar") --> "invalid position"! (arg cannot contain comma)

2004-04-16  Andras Varga

	* cpar.cc, cenum.cc: fixed two possible bugs after Johnny's valgrinding

2004-04-13  Andras Varga

	* cmessage.cc: implemented new cMessage methods setControlInfo(), 
	removeControlInfo(), controlInfo().

2004-04-04  Andras Varga

	* simplemodule.cc: cancelEvent(): don't throw error if message is not
	currently scheduled, just return.

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-02-23  Andras Varga

	* cmodule.cc: added changeParentTo() to cModule.

2004-02-22  Andras Varga

	* cmodule.cc: added gateSize() to cModule.

2004-02-21  Andras Varga

	* cmodule.cc: setGateSize() made more tolerant; this is needed for
	"gate++" NED feature (see nedxml/ChangeLog)

	* cpar.cc: turned type character into English type names in cPar error
	messages, e.g. "Cannot cast from type `D' to `S'" became 
	"Cannot cast from type double (D) to string (S)'".

2004-02-20  Andras Varga
