@@ -1,3 +1,7 @@
+2004-08-11   Andras Varga
+
+	* cchannel.cc: added check for negative delays
+
 2004-07-22  ------ omnetpp-3.0a6 released ------
 
 2004-07-15   Andras Varga
